# yeti-mcp

./: README.md  main.py  pyproject.toml  ts.py
.github/workflows/: unittests.yaml
docker/: .env.sample  Dockerfile  docker-compose.yml
src/: main.py  server.py
src/yeti_mcp/: resources.py  tools.py  utils.py
tests/: test_tools.py
